TWC3167-7269: The box behind the cancel button CSS fix (#2529)

--- a/Intel.MyDeals/Client/src/app/admin/CustomerVendors/admin.customerVendors.component.css
+++ b/Intel.MyDeals/Client/src/app/admin/CustomerVendors/admin.customerVendors.component.css
@@ -11,7 +11,8 @@
 #command-icon-first {
     background-color: unset;
     color: #424141;
-    border: none
+    border: none;
+    box-shadow:none;
 }
 
     #command-icon-first:hover {
